added lined paper background

--- a/proj/registration/templates/registration/base.html
+++ b/proj/registration/templates/registration/base.html
@@ -3,6 +3,7 @@
 <head>
     {% load static %}
     <title>{% block titleblock %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "css/base.css" %}?version=0.1" />
 </head>
 <body><form id="defaults" >
     <input name="csrfmiddlewaretoken" type="hidden" value="{{ csrf_token }}">
