--- a/proj/registration/templates/registration/home.html
+++ b/proj/registration/templates/registration/home.html
@@ -6,13 +6,6 @@ Welcome to MsPencil!
 
 {% block bodyblock %}
 <div class="main">
-Welcome to the site where buying teaching supplies is easy. Linked up to Amazon.
-<div style="float: right;">
-{% if user.is_authenticated %}
-Hello {{ user.username }}!&nbsp;&nbsp;&nbsp;<a href="/logout">Logout</a>
-{% else %}
-<a href="/login">Login</a>&nbsp;&nbsp;&nbsp;<a href="/register">Register</a>
-{% endif %}
-</div>
+    <div class="title">Welcome to MsPencil!</div>
 </div>
 {% endblock %}
