--- a/proj/registration/static/css/base.css
+++ b/proj/registration/static/css/base.css
@@ -31,7 +31,7 @@ body {
         -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
         box-shadow: 0 1px 2px rgba(0,0,0,0.07);
         width: 100vw;
-        height: 1056px;
+        height: 100%;
 }
 
 .main::after {
@@ -46,8 +46,102 @@ body {
         z-index: -1;
 }
 
-.title {
-    font-size: 14px;
-    padding-left: 12%;
-    padding-top: 8px;
+.header {
+    width: 80%;
+    padding-top: 5px;
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 30px;
+    background-color: #f4ff4066;
+    grid-area: header
+}
+
+.header a {
+    text-decoration: none;
+    color: black;
+}
+
+.leftheader {
+    display: inline-block;
+    font-size: 15px;
+
+}
+.rightheader {
+    display: inline-block;
+    float: right;
+    font-size: 13px;
+}
+
+.rightheader a {
+    text-decoration: underline;
+}
+
+.sidebar {
+    margin-left: 10%;
+    margin-top: 10px;
+    width: 15%;
+    font-size: 13px;
+    display: inline-block;
+    margin-right: 2px;
+    height: 100%;
+    float: left;
+
+}
+
+.gradeselector {
+    background-color: #00dbff4d;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+
+.themeselector {
+    background-color: #00ff394d;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+.typeselector {
+    background-color: #ff7e004d;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+.listy {
+    display: inline-block;
+}
+
+.grade {
+    display: block;
+}
+
+.contents {
+    display: inline-block;
+    width: 65%;
+    top: 0;
+    height: 100%;
+    border-radius: 5px;
+    background-color: #d257571a;
+    margin-top: 10px;
+    padding: 10px;
+
+}
+
+.product {
+    display: inline-block;
+    padding-right: 2px;
+    width: 150px;
+}
+
+.product img {
+    margin-bottom: 0px;
+}
+
+.descriptionbox {
+    background-color: white;
+    margin-top: 0px;
 }
