fixed checkbox selection and added logo from google font

--- a/proj/registration/templates/registration/base.html
+++ b/proj/registration/templates/registration/base.html
@@ -4,6 +4,7 @@
     {% load static %}
     <title>{% block titleblock %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static "css/base.css" %}?version=0.1" />
+<link href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
 </head>
 <body><form id="defaults" >
     <input name="csrfmiddlewaretoken" type="hidden" value="{{ csrf_token }}">
