--- a/proj/registration/templates/registration/home.html
+++ b/proj/registration/templates/registration/home.html
@@ -9,7 +9,7 @@ MsPencil
 <div class="main">
     <div class="header">
         <div class="leftheader">
-            <a href="/">MsPencil</a>
+            <a href="/">Ms.Pencil</a>
         </div>
         <div class="rightheader">
             <a href="/register">Register</a>
@@ -19,38 +19,38 @@ MsPencil
     <div class="sidebar">
         <div class="gradeselector">
             <div class="listy">
-                <div class="grade"><input type="checkbox" name="prek">Pre-K</div>
-                <div class="grade"><input type="checkbox" name="1st">1st grade</div>
-                <div class="grade"><input type="checkbox" name="2nd">2nd grade</div>
-                <div class="grade"><input type="checkbox" name="3rd">3rd grade</div>
-                <div class="grade"><input type="checkbox" name="4th">4th grade</div>
-                <div class="grade"><input type="checkbox" name="5th">5th grade</div>
-                <div class="grade"><input type="checkbox" name="6th">6th grade</div>
+                <div class="grade"><label><input type="checkbox" name="prek" />Pre-K</label></div>
+                <div class="grade"><label><input type="checkbox" name="1st" />1st grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="2nd" />2nd grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="3rd" />3rd grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="4th" />4th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="5th" />5th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="6th" />6th grade</label></div>
             </div>
             <div class="listy">
-                <div class="grade"><input type="checkbox" name="7th">7th grade</div>
-                <div class="grade"><input type="checkbox" name="8th">8th grade</div>
-                <div class="grade"><input type="checkbox" name="9th">9th grade</div>
-                <div class="grade"><input type="checkbox" name="9th">10th grade</div>
-                <div class="grade"><input type="checkbox" name="9th">11th grade</div>
-                <div class="grade"><input type="checkbox" name="9th">12th grade</div>
+                <div class="grade"><label><input type="checkbox" name="7th">7th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="8th">8th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="9th">9th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="9th">10th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="9th">11th grade</label></div>
+                <div class="grade"><label><input type="checkbox" name="9th">12th grade</label></div>
             </div>
         </div>
 
         <div class="themeselector">
-            <div class="theme"><input type="checkbox" name="halloween">Halloween</div>
-            <div class="theme"><input type="checkbox" name="veterans">Veteran's Day</div>
-            <div class="theme"><input type="checkbox" name="thanksgiving">Thanksgiving</div>
-            <div class="theme"><input type="checkbox" name="hannukah">Hannukah</div>
-            <div class="theme"><input type="checkbox" name="christmas">Christmas</div>
-            <div class="theme"><input type="checkbox" name="newyears">New Years</div>
-            <div class="theme"><input type="checkbox" name="valentines">Valentine's Day</div>
+            <div class="theme"><label><input type="checkbox" name="halloween">Halloween</label></div>
+            <div class="theme"><label><input type="checkbox" name="veterans">Veteran's Day</label></div>
+            <div class="theme"><label><input type="checkbox" name="thanksgiving">Thanksgiving</label></div>
+            <div class="theme"><label><input type="checkbox" name="hannukah">Hannukah</label></div>
+            <div class="theme"><label><input type="checkbox" name="christmas">Christmas</label></div>
+            <div class="theme"><label><input type="checkbox" name="newyears">New Years</label></div>
+            <div class="theme"><label><input type="checkbox" name="valentines">Valentine's Day</label></div>
         </div>
 
         <div class="typeselector">
-            <div class="type"><input type="checkbox" name="schoolsupplies">School Supplies</div>
-            <div class="type"><input type="checkbox" name="decorations">Decorations</div>
-            <div class="type"><input type="checkbox" name="thanksgiving">Activities / Games</div>
+            <div class="type"><label><input type="checkbox" name="schoolsupplies">School Supplies</label></div>
+            <div class="type"><label><input type="checkbox" name="decorations">Decorations</label></div>
+            <div class="type"><label><input type="checkbox" name="thanksgiving">Activities / Games</label></div>
         </div>
     </div>
     <div class="contents">
