--- a/proj/registration/static/css/base.css
+++ b/proj/registration/static/css/base.css
@@ -63,8 +63,12 @@ body {
 
 .leftheader {
     display: inline-block;
-    font-size: 15px;
 
+}
+
+.leftheader a {
+    font-family: 'Allerta Stencil', sans-serif;
+    font-size: 27px;
 }
 .rightheader {
     display: inline-block;
